feat: Se agrega get para obtener los bancos que tienen codigos registrados en terceros udistrital/tesoreria_cliente#143
